java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass/BrokenFileNoHighlightingWithPackage.java
<error descr="Package statement is not allowed in compact source files">package a;</error>

int ab;

class AB {

}